app/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-apps
  namespace: pymongo
  labels:
    app: flask-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-apps
  template:
    metadata:
      labels:
        app: flask-apps
    spec:
      containers:
        - name: flask-apps
          image: hehehangchha/flask-app:v5
          ports:
            - containerPort: 9999
