app/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: my-ingress
  namespace: pymongo
spec:
  ingressClassName: nginx
  rules:
    - host: myapps.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: app-svc
                port:
                  number: 3333
          - path: /mongodb
            pathType: Exact
            backend:
              service:
                name: app-svc
                port:
                  number: 3333
